--- a/package.json
+++ b/package.json
@@ -4,8 +4,5 @@
     "description": "Extracts contract deployment data from run-latest.json (foundry broadcast output) and writes to deployments/json/{chainId}.json & deployments/{chainId}.md",
     "main": "index.js",
     "author": "Polygon Labs",
-    "license": "(Apache-2.0 OR MIT)",
-    "dependencies": {
-        "axios": "^1.6.7"
-    }
+    "license": "(Apache-2.0 OR MIT)"
 }
